# tools-templates

./: README.md
image-templates/tool-template/: .bumpversion.cfg  README.md  cookiecutter.json  pyproject.toml
image-templates/tool-template/hooks/: post_gen_project.py  pre_gen_project.py
image-templates/tool-template/{{cookiecutter.container_name}}/: .bumpversion.cfg  Dockerfile  README.md  VERSION  build-docker.sh  plugin.json  pyproject.toml
image-templates/tool-template/{{cookiecutter.container_name}}/src/{{cookiecutter.package_folders}}/: __init__.py  {{ cookiecutter.package_name }}.py
image-templates/tool-template/{{cookiecutter.container_name}}/tests/: test_cli.py  test_{{cookiecutter.package_name}}.py
tabular-templates/python-template/: README.md  cookiecutter.json  pyproject.toml
tabular-templates/python-template/awesome-function-tool/: .bumpversion.cfg  Dockerfile  README.md  build-docker.sh  plugin.json  pyproject.toml  run-plugin.sh
tabular-templates/python-template/awesome-function-tool/src/polus/tabular/package1/package2/awesome_function/: __init__.py  __main__.py  awesome_function.py
tabular-templates/python-template/awesome-function-tool/tests/: __init__.py  test_awesome_function.py  test_cli.py
tabular-templates/python-template/hooks/: post_gen_project.py  pre_gen_project.py
tabular-templates/python-template/{{cookiecutter.container_name}}/: README.md  plugin.json
