[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.tool_version}}"
description = "{{cookiecutter.tool_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
bfio = {version = ">=2.3.3,<3.0", extras = ["all"]}
filepattern = ">=2.0.4,<3.0"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^8.3"
pytest-sugar = "^1.0"
pytest-xdist = "^3.6"
pre-commit = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
